<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/headercolor_gradient">

    <LinearLayout
        android:id="@+id/logoBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/logo" />

    </LinearLayout>

    <!---Header sign up and login-->
    <LinearLayout
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ImageViewOne"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signupPage"
            android:textColor="#000000"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:padding="6dp"
            android:fontFamily="sans-serif"
            android:textSize="19sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ImageViewTwo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_account" />

        <!-- android:layout_toEndOf="@+id/ImageViewTwo"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/loginPage"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:textSize="19sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>